deployments/arr/radarr/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: radarr
  selector:
    app: radarr
    part-of: radarr
