deployments/arr/radarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.radarr.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: radarr-service
          port: 7878
    - match: Host(`radarr.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: radarr-service
          port: 7878
      middlewares:
        - name: media-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
